[#96260986] francis/naval Added formatting to map stats panel to ensure the stats fit without wrapping

--- a/eums/client/less/dashboard.less
+++ b/eums/client/less/dashboard.less
@@ -323,7 +323,7 @@ div[class*="-aggregate-marker-icon"] div {
   width: 36%;
 }
 .stats-td-last-column {
-  width: 30%;
+  width: 31%;
 }
 .stats-td-first-column {
   width: 33%;
@@ -337,4 +337,16 @@ div[class*="-aggregate-marker-icon"] div {
 
 .inherit-font{
   font-size: inherit;
+}
+
+.stats-bold-label {
+  font-weight: bold;
+  margin: 5px;
+  color: #777;
+}
+
+.stats-bold-label-lg {
+  font-weight: bold;
+  margin: 5px;
+  font-size: 1.2em;
 }
